force-app/main/default/objects/Resource_Role__c/Resource_Role__c.object-meta.xml
<CustomObject>
    <label>Resource Role</label>
    <nameField>
        <label>Resource Role Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resource Roles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>