force-app/main/default/objects/Resource_Role__c/fields/Billing_Unit__c.field-meta.xml
<CustomField>
    <fullName>Billing_Unit__c</fullName>
    <description>The unit of measure for billing this resource.</description>
    <label>Billing Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hour</fullName>
                <default>true</default>
                <label>Hour</label>
            </value>
            <value>
                <fullName>Day</fullName>
            </value>
            <value>
                <fullName>Week</fullName>
            </value>
            <value>
                <fullName>Month</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>